# sdl2_music_project

./: CMakeLists.txt  README.md  quickScript.sh
deprecated/: main.cpp  main.h
include/: image_fetch_sample.h  main.h  mainClassSample.h  sdl2Interface.h
lib/: mainClassSampleLib.cpp
music_files/: readme.txt
src/: bitmap_sample.cpp  health_bar_animation.cpp  image_fetch_sample.cpp  main.cpp  mainClassSample.cpp  sdl2Interface.cpp  showdir.cpp  taglib_sample.cpp  testButton.cpp  testDirList.cpp  testMountFile.cpp  testSoundBasics.cpp
src/modules/: testModules.cpp
